# Charlie-AI

./: README.md
Charlie AI/: Main.py  Requirements.txt  pyproject.toml
Charlie AI/Backend/: Automation.py  ImageGenration.py  Model.py  RealTimeSearchEngine.py  SpeachToText.py  TextToSpeach.py
Charlie AI/Data/: Voice.html
